--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
 	"main": "index.js",
 	"license": "MIT",
 	"dependencies": {
+		"body-parser": "^1.18.3",
 		"buefy": "^0.7.2",
 		"ethereumjs-tx": "^1.3.7",
+		"express": "^4.16.4",
 		"keythereum": "^1.0.4",
 		"parcel-bundler": "^1.11.0",
 		"vue": "^2.5.22",
